Fix handling of button flex/wrap.

--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -2,7 +2,6 @@
 @import "@automattic/components/src/styles/typography.scss";
 
 $button-padding: 8px 32px;
-$button-bar-wrap-width: 1346px;
 
 .stats-purchase-page {
 	--font-body: 16px;
@@ -523,11 +522,6 @@ $button-bar-wrap-width: 1346px;
 
 	.components-button + button.components-button {
 		margin-left: 12px;
-
-		@media ( max-width: $button-bar-wrap-width ) {
-			margin-left: 0;
-			margin-top: 12px;
-		}
 	}
 }
 
@@ -586,8 +580,10 @@ $button-bar-wrap-width: 1346px;
 
 .stats-purchase-wizard__actions {
 	display: flex;
+	flex-wrap: wrap;
+	gap: 12px;
 
-	@media ( max-width: $button-bar-wrap-width ) {
-		flex-wrap: wrap;
+	.components-button + button.components-button {
+		margin: 0;
 	}
 }
